--- a/less/footer.less
+++ b/less/footer.less
@@ -1,7 +1,6 @@
 footer {
     @media @mobile {
       position: absolute;
-      top: 417%;
       z-index: 99;
       margin: 0 auto;
       color: #dbca69;
